src/main/java/com/example/sampleapp/demo/error/HttpError.java
package com.example.sampleapp.demo.error;

import org.springframework.http.HttpStatus;

public interface HttpError {
    HttpStatus getStatus();
    String getMessage();
    String name();
}
